Rearranged directory structure and started working on orange theme

--- a/app/assets/bluegray.html
+++ b/app/assets/bluegray.html
@@ -1,7 +1,9 @@
 
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="app.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/foundation.css" />
+    <link rel="stylesheet" type="text/css" href="css/bluegray.css" />
   </head>
 
   <body>
